
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.0-rc-1 ($LastChangedRevision$, $LastChangedDate$)
====================================
- Fixed regClient*() functions to work again on cacheable scripts
- Move element source and include cache files outside of context cache directories since they should be cleared only when elements are updated
- Remove eval() from modScript and re-enable remote debugging of modScript instances by caching function as include in addition to source cache
- [#MODX-1759] Ensure manager log fires on top menu deletion
- [#MODX-1772] Ensure array of IDs is passed to OnBeforeEmptyTrash and OnEmptyTrash plugin events
- Added a welcome screen to show on first login to manager
- [#MODX-1738] Fixed issue with default value on radio TVs
- [#MODX-1741] Fixing inconsistent widths for radio options by making them list vertically rather than horizontally
- [#MODX-1769] Lexicon grid search now searches name and value
- [#MODX-877] Updated confusing text on TV access permissions tab
- [#MODX-1766] Fixed PHP_SAPI issue to properly work by setting a default value on setup to provide a default http_host value to  properly populate the site_url
- Fixed bug in setup that didn't catch processors_path in prior configs
- [#MODX-1759] Fixed bugs with manager log not storing correct PK values, or displaying missing keys in grid
- [#MODX-1766] Fixed config.inc.tpl to work with non-httpd SAPI's
- Added title/info for the Reports->System Info->Database page. This is return fixed the CSS styling issue as well.
- Fixed CSS Styling on Recent Documents. 5px padding was removed.
- Fixed bugs with modMail class and default attributes that prevented attributes from persisting after a reset()
- Removing deprecated RTE handler code
- [#MODX-1762] Increased file uploader window size for translations