@@ -4,6 +4,7 @@ development release, and is only shown to give an idea of what's currently in th
 
 MODx Revolution 2.0.0-rc-1 ($LastChangedRevision$, $LastChangedDate$)
 ====================================
+- Fixed CSS compression copying in build.xml
 - Fixed regClient*() functions to work again on cacheable scripts
 - Move element source and include cache files outside of context cache directories since they should be cleared only when elements are updated
 - Remove eval() from modScript and re-enable remote debugging of modScript instances by caching function as include in addition to source cache
